# discord-bot

./: LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
api/: api.py
bot/: bot.py
docs/: mkdocs.yml
